# prefixMatcher

./: LICENSE  Makefile  prefixMatcher.cabal  tabularasa
src/Text/PrefixMatcher/: String.hs
test/: Main.hs
