name:                prefixMatcher
version:             0.0.0.0
synopsis:            A simple matching library for strings
license:             ISC
license-file:        LICENSE
author:              Gregory Nisbet
maintainer:          gregory.nisbet@gmail.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
    exposed-modules:
        Text.PrefixMatcher.String
   
    build-depends:       base >=4.8 && <4.9
    
    hs-source-dirs:      src
    default-language:    Haskell98


Test-Suite tests
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Main.hs
    default-language:   Haskell98
    build-depends:
        prefixMatcher,
        base >=4.8 && <4.9,
        test-framework >=0.8.1,
        test-framework-hunit >=0.3,
        HUnit >=1.5
